# AP-Email

./: .gitignore  ANDROID_SIGNUP_README.md  ANDROID_USER_AUTH_IMPLEMENTATION.md  IstorageTests.cpp  README.md  VERIFICATION_REPORT.md  details.txt  docker-compose.yml  package-lock.json
Wiki/Android_Application/: Android_Email_actions.md  Android_Sign_In.md  Android_Sign_Up.md  Android_label_navigation.md  README.md
Wiki/Getting_Started/: Development_Setup.md  Prerequisites.md  README.md
Wiki/Introduction/: Architecture.md  Features.md  README.md
Wiki/Web_Application/: Compose_Email.md  Inbox.md  Labels.md  README.md  Sign_In.md  Sign_Up.md
src/: AddTest.cpp  BloomTest.cpp  CMakeLists.txt  CheckTest.cpp  DockerMain  DockerTest  Istorage.h  IstorageTests.cpp  client_socket.py  main.cpp  myhashTest.cpp  runTests.sh  start-client.sh  start-js-server.sh  start-server.sh  start.sh  test.cpp
src/android/: settings.gradle.kts
src/config/: .env  CMakeLists.txt  DockerClient  DockerJs  DockerMain  DockerReact  DockerServer  DockerTest
src/datatypes/: AddURLCommand.cpp  AddURLCommand.h  BloomFilter.cpp  BloomFilter.h  CheckURLCommand.cpp  CheckURLCommand.h  DeleteURLCommand.cpp  Icommand.h  Istorage.h  MyHash.cpp  MyHash.h  Server.cpp  addURL.h  app.cpp  app.h  bloomFilterStorage.cpp  bloomFilterStorage.h  cli.cpp  fileStorage.cpp  fileStorage.h  icommand.h  imenu.h
src/js/: app.js  package-lock.json  package.json
src/react-server/: package-lock.json  package.json
src/tests/: AddTest.cpp  BloomTest.cpp  CMakeLists.txt  CheckTest.cpp  add_check_update_test.cpp  (+4 more)
(+173 files in other folders)
